--- a/Syscall.properties
+++ b/Syscall.properties
@@ -21,6 +21,9 @@ Read =       14
 Write =      15
 Close =      16
 Exit2 =      17
+SyscallFork = 18
+SyscallProcessChange = 19
+SyscallProcessTerminate = 20
 Time =       30
 MidiOut =    31
 Sleep =      32
